@@ -1,43 +1,44 @@
 package uk.joshiejack.penguinlib.util.icon;
 
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import net.minecraft.client.util.ITooltipFlag;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.item.Item;
-import net.minecraft.network.PacketBuffer;
-import net.minecraft.tags.ITag;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-
-import java.util.List;
-import java.util.stream.Collectors;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import net.minecraft.core.HolderSet;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.tags.ItemTags;
+import net.minecraft.tags.TagKey;
+import net.minecraft.util.ExtraCodecs;
+import net.minecraft.world.item.Item;
 
 public class TagIcon extends AbstractCyclicIcon.ItemStack {
-    private final ITag.INamedTag<Item> tag;
+    public static final Codec<TagIcon> CODEC = RecordCodecBuilder.create(instance -> instance.group(
+            TagKey.codec(Registries.ITEM).fieldOf("tag").forGetter(obj -> obj.tag),
+            ExtraCodecs.POSITIVE_INT.optionalFieldOf("count", 1).forGetter(obj -> obj.originalCount)
+    ).apply(instance, TagIcon::new));
 
-    public TagIcon(ITag.INamedTag<Item> tag) {
-        super(tag.getValues().stream().map(net.minecraft.item.ItemStack::new).collect(Collectors.toList()));
+    public final TagKey<Item> tag;
+
+    public TagIcon(TagKey<Item> tag, int count) {
+        super(Type.TAG, BuiltInRegistries.ITEM.getTag(tag).stream()
+                .flatMap(HolderSet.ListBacked::stream)
+                .map(h -> new ItemIcon(h.value().getDefaultInstance()))
+                .toList(), count);
         this.tag = tag;
+    }
 
+    public TagIcon(FriendlyByteBuf buf) {
+        this(ItemTags.create(buf.readResourceLocation()), buf.readInt());
     }
 
     @Override
-    public JsonElement toJson(JsonObject json) {
-        json.addProperty("tag", tag.getName().toString());
-        return json;
+    public Codec<? extends Icon> codec() {
+        return CODEC;
     }
 
     @Override
-    public void toNetwork(PacketBuffer pb) {
-        pb.writeByte(Icon.Type.TAG.ordinal());
-        pb.writeResourceLocation(tag.getName());
-    }
-
-    @OnlyIn(Dist.CLIENT)
-    @Override
-    public List<ITextComponent> getTooltipLines(PlayerEntity player) {
-        return object.getTooltipLines(player, ITooltipFlag.TooltipFlags.NORMAL);
+    public void toNetwork(FriendlyByteBuf pb) {
+        pb.writeResourceLocation(tag.location());
+        pb.writeInt(originalCount);
     }
 }
